--- a/InfusionSoft/IT_instance/EL/bti-InfusionSoft-IT-EL-Set1-dly-app/serverless.yaml
+++ b/InfusionSoft/IT_instance/EL/bti-InfusionSoft-IT-EL-Set1-dly-app/serverless.yaml
@@ -24,7 +24,7 @@ provider:
       Action:
         - dynamodb:Scan
         - dynamodb:GetItem
-      Resource: "arn:aws:dynamodb:us-west-2:004181835165:table/bti_job_config_InfusionSoft_IT"
+      Resource: "arn:aws:dynamodb:us-west-2::table/bti_job_config_InfusionSoft_IT"
     # Allow to scan, get, put and update the `bti_job_history_InfusionSoft_IT` DynamoDB table
     - Effect: Allow
       Action:
@@ -32,7 +32,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:PutItem
         - dynamodb:UpdateItem
-      Resource: "arn:aws:dynamodb:us-west-2:004181835165:table/bti_job_history_InfusionSoft_IT"
+      Resource: "arn:aws:dynamodb:us-west-2::table/bti_job_history_InfusionSoft_IT"
 functions:
   app:
     handler: app.extract_load_infusionSoft_it
