--- a/InfusionSoft/JJ-Instance/EL/bti-InfusionSoft-JJ-EL-Set3-dly-app/serverless.yaml
+++ b/InfusionSoft/JJ-Instance/EL/bti-InfusionSoft-JJ-EL-Set3-dly-app/serverless.yaml
@@ -23,7 +23,7 @@ provider:
       Action:
         - dynamodb:Scan
         - dynamodb:GetItem
-      Resource: "arn:aws:dynamodb:us-west-2:004181835165:table/bti_job_config_InfusionSoft"
+      Resource: "arn:aws:dynamodb:us-west-2::table/bti_job_config_InfusionSoft"
     # Allow to scan, get, put and update the `bti_job_history_InfusionSoft` DynamoDB table
     - Effect: Allow
       Action:
@@ -31,7 +31,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:PutItem
         - dynamodb:UpdateItem
-      Resource: "arn:aws:dynamodb:us-west-2:004181835165:table/bti_job_history_InfusionSoft"
+      Resource: "arn:aws:dynamodb:us-west-2:able/bti_job_history_InfusionSoft"
 functions:
   app:
     handler: app.extract_load_infusionSoft
